crates/zenith/tests/snapshots/screens__help_overlay__80x24__high-contrast.snap
---
source: crates/zenith/tests/screens.rs
expression: "screen(&draw(&script.app, width, height))"
---
 ZENITH   1 Session  2 APIs  3 Log  4 History                ·     ·     ? keys
  ┌ keys ────────────────────────────────────────────────────────────────────┐
  │ Everywhere                                                               │
  │   ?                       every key, by where it works                   │
  │   Tab                     the next tab                                   │
  │   Shift+Tab               the previous tab                               │
  │   F1, Alt+1               Session, where the terminal delivers the key   │
  │   F2, Alt+2               APIs, where the terminal delivers the key      │
  │   F3, Alt+3               Log, where the terminal delivers the key       │
  │   F4, Alt+4               History, where the terminal delivers the key   │
  │   /                       a command, on the Session tab                  │
  │   Ctrl+O                  the whole envelope of the latest call          │
  │   Ctrl+R                  restart SOLAR, and pick up a new build         │
  │   Ctrl+L                  draw the whole screen again                    │
  │   Ctrl+C                  cancel the call in flight when SOLAR offers    │
  │                           solar.cancel; again, quit                      │
  │   Esc                     close the overlay, menu or form                │
  │                                                                          │
  │ The command line                                                         │
  │   Enter                   run the line as typed                          │
  │   Tab                     complete, and the next candidate               │
  │   Shift+Tab               the previous candidate                         │
  └ Esc close  ↑ ↓ scroll  ──────────────────────────────────────────────────┘
 ──●── SOLAR 0.1.0 · solar/1 ─── last call 1.84 ms ─── in orbit 42s ───────────
--- every cell not listed is #F5F1E8 on #0B0C14
 0:  0-7   #FFC23D on #0B0C14 bold
 0: 10-18  #FFC23D on #0B0C14 bold underlined
 0: 73-73  #FFC23D on #0B0C14 bold
 1:  3-8   #FFC23D on #0B0C14 bold
 2:  4-13  #FFC23D on #0B0C14 bold
 3:  6-27  #FFC23D on #0B0C14 bold
 4:  6-27  #FFC23D on #0B0C14 bold
 5:  6-27  #FFC23D on #0B0C14 bold
 6:  6-27  #FFC23D on #0B0C14 bold
 7:  6-27  #FFC23D on #0B0C14 bold
 8:  6-27  #FFC23D on #0B0C14 bold
 9:  6-27  #FFC23D on #0B0C14 bold
10:  6-27  #FFC23D on #0B0C14 bold
11:  6-27  #FFC23D on #0B0C14 bold
12:  6-27  #FFC23D on #0B0C14 bold
13:  6-27  #FFC23D on #0B0C14 bold
14:  6-27  #FFC23D on #0B0C14 bold
16:  6-27  #FFC23D on #0B0C14 bold
18:  4-19  #FFC23D on #0B0C14 bold
19:  6-27  #FFC23D on #0B0C14 bold
20:  6-27  #FFC23D on #0B0C14 bold
21:  6-27  #FFC23D on #0B0C14 bold
22:  4-6   #FFC23D on #0B0C14 bold
22: 15-17  #FFC23D on #0B0C14 bold
23:  3-3   #FFC23D on #0B0C14
23:  7-17  #FFC23D on #0B0C14 bold
