crates/zenith/tests/snapshots/screens__help_overlay__80x24__light.snap
---
source: crates/zenith/tests/screens.rs
expression: "screen(&draw(&script.app, width, height))"
---
 ZENITH   1 Session  2 APIs  3 Log  4 History                ·     ·     ? keys
  ┌ keys ────────────────────────────────────────────────────────────────────┐
  │ Everywhere                                                               │
  │   ?                       every key, by where it works                   │
  │   Tab                     the next tab                                   │
  │   Shift+Tab               the previous tab                               │
  │   F1, Alt+1               Session, where the terminal delivers the key   │
  │   F2, Alt+2               APIs, where the terminal delivers the key      │
  │   F3, Alt+3               Log, where the terminal delivers the key       │
  │   F4, Alt+4               History, where the terminal delivers the key   │
  │   /                       a command, on the Session tab                  │
  │   Ctrl+O                  the whole envelope of the latest call          │
  │   Ctrl+R                  restart SOLAR, and pick up a new build         │
  │   Ctrl+L                  draw the whole screen again                    │
  │   Ctrl+C                  cancel the call in flight when SOLAR offers    │
  │                           solar.cancel; again, quit                      │
  │   Esc                     close the overlay, menu or form                │
  │                                                                          │
  │ The command line                                                         │
  │   Enter                   run the line as typed                          │
  │   Tab                     complete, and the next candidate               │
  │   Shift+Tab               the previous candidate                         │
  └ Esc close  ↑ ↓ scroll  ──────────────────────────────────────────────────┘
 ──●── SOLAR 0.1.0 · solar/1 ─── last call 1.84 ms ─── in orbit 42s ───────────
--- every cell not listed is #17161C on #F5F1E8
 0:  0-7   #8C4907 on #F5F1E8 bold
 0: 10-18  #8C4907 on #F5F1E8 bold underlined
 0: 21-26  #555355 on #F5F1E8
 0: 29-33  #555355 on #F5F1E8
 0: 36-44  #555355 on #F5F1E8
 0: 45-72  #868482 on #F5F1E8
 0: 73-73  #8C4907 on #F5F1E8 bold
 0: 74-79  #555355 on #F5F1E8
 1:  2-2   #868482 on #F5F1E8
 1:  3-8   #8C4907 on #F5F1E8 bold
 1:  9-77  #868482 on #F5F1E8
 2:  2-2   #868482 on #F5F1E8
 2:  4-13  #8C4907 on #F5F1E8 bold
 2: 77-77  #868482 on #F5F1E8
 3:  2-2   #868482 on #F5F1E8
 3:  6-27  #8C4907 on #F5F1E8 bold
 3: 77-77  #868482 on #F5F1E8
 4:  2-2   #868482 on #F5F1E8
 4:  6-27  #8C4907 on #F5F1E8 bold
 4: 77-77  #868482 on #F5F1E8
 5:  2-2   #868482 on #F5F1E8
 5:  6-27  #8C4907 on #F5F1E8 bold
 5: 77-77  #868482 on #F5F1E8
 6:  2-2   #868482 on #F5F1E8
 6:  6-27  #8C4907 on #F5F1E8 bold
 6: 77-77  #868482 on #F5F1E8
 7:  2-2   #868482 on #F5F1E8
 7:  6-27  #8C4907 on #F5F1E8 bold
 7: 77-77  #868482 on #F5F1E8
 8:  2-2   #868482 on #F5F1E8
 8:  6-27  #8C4907 on #F5F1E8 bold
 8: 77-77  #868482 on #F5F1E8
 9:  2-2   #868482 on #F5F1E8
 9:  6-27  #8C4907 on #F5F1E8 bold
 9: 77-77  #868482 on #F5F1E8
10:  2-2   #868482 on #F5F1E8
10:  6-27  #8C4907 on #F5F1E8 bold
10: 77-77  #868482 on #F5F1E8
11:  2-2   #868482 on #F5F1E8
11:  6-27  #8C4907 on #F5F1E8 bold
11: 77-77  #868482 on #F5F1E8
12:  2-2   #868482 on #F5F1E8
12:  6-27  #8C4907 on #F5F1E8 bold
12: 77-77  #868482 on #F5F1E8
13:  2-2   #868482 on #F5F1E8
13:  6-27  #8C4907 on #F5F1E8 bold
13: 77-77  #868482 on #F5F1E8
14:  2-2   #868482 on #F5F1E8
14:  6-27  #8C4907 on #F5F1E8 bold
14: 77-77  #868482 on #F5F1E8
15:  2-2   #868482 on #F5F1E8
15: 77-77  #868482 on #F5F1E8
16:  2-2   #868482 on #F5F1E8
16:  6-27  #8C4907 on #F5F1E8 bold
16: 77-77  #868482 on #F5F1E8
17:  2-2   #868482 on #F5F1E8
17: 77-77  #868482 on #F5F1E8
18:  2-2   #868482 on #F5F1E8
18:  4-19  #8C4907 on #F5F1E8 bold
18: 77-77  #868482 on #F5F1E8
19:  2-2   #868482 on #F5F1E8
19:  6-27  #8C4907 on #F5F1E8 bold
19: 77-77  #868482 on #F5F1E8
20:  2-2   #868482 on #F5F1E8
20:  6-27  #8C4907 on #F5F1E8 bold
20: 77-77  #868482 on #F5F1E8
21:  2-2   #868482 on #F5F1E8
21:  6-27  #8C4907 on #F5F1E8 bold
21: 77-77  #868482 on #F5F1E8
22:  2-3   #868482 on #F5F1E8
22:  4-6   #8C4907 on #F5F1E8 bold
22:  7-14  #555355 on #F5F1E8
22: 15-17  #8C4907 on #F5F1E8 bold
22: 18-26  #555355 on #F5F1E8
22: 27-77  #868482 on #F5F1E8
23:  0-2   #868482 on #F5F1E8
23:  3-3   #8C4907 on #F5F1E8
23:  4-6   #868482 on #F5F1E8
23:  7-17  #8C4907 on #F5F1E8 bold
23: 18-20  #555355 on #F5F1E8
23: 28-32  #868482 on #F5F1E8
23: 33-42  #555355 on #F5F1E8
23: 50-54  #868482 on #F5F1E8
23: 55-63  #555355 on #F5F1E8
23: 67-79  #868482 on #F5F1E8
